# demo-dockerize-ragbit

./: README.md
backend/: rag.py
knowledge_base/articles.lance/_transactions/: 0-43763e8f-0c60-40a7-ae1f-f7ef02c0f38b.txn  11-63ab28f2-9089-450e-9c1a-298e69f1811f.txn  13-a3617093-51ab-4458-a614-a29dba4be227.txn  16-5e8185c0-6387-4f57-827f-2e3170f23bf6.txn  3-84f55c3f-d484-4cf4-afe1-0f623390a58d.txn  4-79c93abd-5746-4217-9866-5a2b0824e027.txn  5-e77a5966-6b73-4b50-b904-8e97bd53cfc4.txn  7-73243ee0-0c80-4475-9d45-ea25bf1f48ef.txn  9-69e680b6-07e4-4976-a2e3-dccf1ef297d4.txn
ragbit/: pyproject.toml
ragbit/src/ragbit/: __init__.py  docker-compose.yaml
ragbit/src/ragbit/backend/: Dockerfile  api.py  constants.py  data_models.py  pyproject.toml  rag.py
ragbit/src/ragbit/frontend/: Dockerfile  app.py  pyproject.toml
ragbit/src/ragbit/knowledge_base/articles.lance/_transactions/: 1-a6b0e067-7aea-432b-8321-0bf8d0b8249e.txn  10-88aa3e32-b1a7-4bd1-8c27-6a0388b1442e.txn  12-101ec602-26ed-4914-b135-3fec09caa08f.txn  14-1b3361b8-f813-4b62-8ab8-b74b981ca461.txn  15-b9a8b7a6-26e4-4508-ab4e-c774eb8960c1.txn  17-58866383-79b2-47af-8bd0-6e5a650cbdfc.txn  18-d84d271c-eb4b-4d75-a6e7-e77236b21654.txn  2-cf4c1d3c-f54c-40e1-b93b-220ac6a36c2c.txn  6-500d9fb5-57a5-4697-970b-6dab4961fd1a.txn  8-6d8e4c2e-7ae3-4715-9ad0-3bce0efc7b17.txn
