[project]
name = "ragbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jonathanhansson", email = "jonathanhanssondg@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ragbit = "ragbit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
