[project]
name = "ragbit"
version = "0.1.0"
description = "Packaging ragbit using uv workspaces"
readme = "README.md"
authors = [
    { name = "jonathanhansson", email = "jonathanhanssondg@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["backend", "frontend"]

[tool.uv.sources]
backend = {workspace = true}
frontend = {workspace = true}

[tool.uv.workspace]
members = ["src/ragbit/frontend", "src/ragbit/backend"]